tests/diagnostics/catalog/snapshots/ir/IR0067.snap
error[IR0067]: IR_E_USE_AFTER_MOVE
 --> tests/diagnostics/catalog/sources/ir/IR0067.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0067
  = help: keep IR validation diagnostics structured and catalog-backed
